<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_dialog">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginHorizontal="24dp"
        android:text="@string/new_payment_description"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/gray"/>

    <TextView
        android:id="@+id/txtContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:text="@string/body_dialog_delete_payment"
        android:textColor="@color/gray_600"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNegative"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="55dp"
            android:layout_weight="1"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            android:text="@string/button_cancel"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:background="@drawable/background_button_negative"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPositive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="24dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:minHeight="55dp"
            android:text="@string/button_yes"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@drawable/background_button_positive"/>
    </LinearLayout>
</LinearLayout>
