<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/new_payment_description"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/gray"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/item_name_input_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_baseline_category_24"
        app:startIconTint="#1976D2">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/item_price_input_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_baseline_attach_money_24"
        app:startIconTint="#FFA000">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtItemPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="55dp"
            android:layout_weight="1"
            android:layout_marginVertical="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/button_cancel"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:background="@drawable/background_button_negative"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:minHeight="55dp"
            android:text="@string/button_submit"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@drawable/background_button_positive"/>
    </LinearLayout>
</LinearLayout>
