<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0D000000">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_title"
            android:textSize="40sp"
            android:textStyle="bold"
            style="@style/TitleLoginAndSignup"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="150dp"
            android:layout_height="1dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_subtitle"
            android:textSize="11sp"/>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nicknameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/nickname_input_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.1"
        app:startIconDrawable="@drawable/ic_android">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:minHeight="65dp"
            android:maxLength="12"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/email_input_hint"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/nicknameLayout"
        app:layout_constraintStart_toStartOf="@+id/nicknameLayout"
        app:layout_constraintTop_toBottomOf="@+id/nicknameLayout"
        app:layout_constraintVertical_bias="0.0"
        app:startIconDrawable="@drawable/ic_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:minHeight="65dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/password_input_hint"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/emailLayout"
        app:layout_constraintStart_toStartOf="@+id/emailLayout"
        app:layout_constraintTop_toBottomOf="@+id/emailLayout"
        app:layout_constraintVertical_bias="0.0"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="65dp"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordConfirmLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/confirm_password_input_hint"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/passwordLayout"
        app:layout_constraintStart_toStartOf="@+id/passwordLayout"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout"
        app:layout_constraintVertical_bias="0.0"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="65dp"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:minHeight="65dp"
        android:text="@string/sign_up_button"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/background_button_positive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/passwordConfirmLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passwordConfirmLayout"
        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmLayout"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtReturn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="@string/back_textview_signup"
        android:textAlignment="center"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnSignUp"
        app:layout_constraintStart_toStartOf="@+id/btnSignUp"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>