<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_dialog">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/change_password_title"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/gray"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/new_password_input_hint"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/emailLayout"
        app:layout_constraintStart_toStartOf="@+id/emailLayout"
        app:layout_constraintTop_toBottomOf="@+id/emailLayout"
        app:layout_constraintVertical_bias="0.0"
        app:startIconDrawable="@drawable/ic_lock">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="65dp"
            android:inputType="textPassword"
            android:backgroundTint="@color/my_window_background"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordConfirmLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/confirm_password_input_hint"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/passwordLayout"
        app:layout_constraintStart_toStartOf="@+id/passwordLayout"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout"
        app:layout_constraintVertical_bias="0.0"
        app:startIconDrawable="@drawable/ic_lock">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="65dp"
            android:inputType="textPassword"
            android:backgroundTint="@color/my_window_background"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="55dp"
            android:layout_weight="1"
            android:layout_marginTop="32dp"
            android:layout_marginVertical="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/button_cancel"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:background="@drawable/background_button_negative"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:minHeight="55dp"
            android:text="@string/button_submit"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@drawable/background_button_positive"/>
    </LinearLayout>
</LinearLayout>
