<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/background_dialog">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="16dp">
        <ImageView
            android:id="@+id/imgWall"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/img_com_tam"
            android:scaleType="centerCrop"/>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/txtItemName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:textSize="32sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/txtItemPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="end"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_added_by"
            android:textColor="@color/gray_600"
            android:drawableStart="@drawable/ic_baseline_android_16"
            android:drawablePadding="8dp"
            android:drawableTint="@color/gray_600"/>

        <TextView
            android:id="@+id/txtNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/gray_600" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_payment_id"
            android:textColor="@color/gray_600"
            android:drawableStart="@drawable/ic_baseline_flash_on_16"
            android:drawablePadding="8dp"
            android:drawableTint="@color/gray_600"/>
        <TextView
            android:id="@+id/txtPaymentId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/gray_600"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_date_added"
            android:textColor="@color/gray_600"
            android:drawableStart="@drawable/ic_baseline_calendar_today_16"
            android:drawablePadding="8dp"
            android:drawableTint="@color/gray_600"/>
        <TextView
            android:id="@+id/txtDateAdded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/gray_600"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="55dp"
            android:layout_weight="1"
            android:layout_marginVertical="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/button_edit"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:background="@drawable/background_button_negative"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@drawable/background_button_positive"
            android:minHeight="55dp"
            android:text="@string/button_ok"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>