<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/my_window_background"
    tools:context=".PaymentHistoryActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            android:background="@drawable/background_button_back"
            android:contentDescription="@string/back_button_description"/>
        <TextView
            android:id="@+id/txtSeasonId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20sp"/>
    </FrameLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="19dp">
        <RadioGroup
            android:checkedButton="@+id/offer"
            android:id="@+id/toggle"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:background="@drawable/background_radio_button_group"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/tabSeason"
                android:background="@drawable/background_button_tab"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:text="@string/tab_season"
                android:textColor="@color/black"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/tabPayment"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_button_tab"
                android:button="@null"
                android:gravity="center"
                android:text="@string/tab_payment"
                android:textColor="@color/black" />
        </RadioGroup>
    </androidx.cardview.widget.CardView>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"/>
</LinearLayout>